--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node -r dotenv/config ./dist/server.js",
     "prebuild": "npm-run-all clean lint:fix format:fix",
-    "prestart:dev": "npm run typecheck"
+    "prestart:dev": "npm run typecheck",
+    "migrate": "prisma migrate dev"
   },
   "keywords": [],
   "author": "",
@@ -36,6 +37,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
+    "prisma": "^6.19.0",
     "rimraf": "^6.1.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
