--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node -r dotenv/config ./dist/server.js",
     "prebuild": "npm-run-all clean lint:fix format:fix",
-    "prestart:dev": "npm run typecheck"
+    "prestart:dev": "npm run typecheck",
+    "migrate": "prisma migrate dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "morgan": "^1.10.1"
@@ -36,6 +38,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
+    "prisma": "^6.19.0",
     "rimraf": "^6.1.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
