--- a/config.env.example
+++ b/config.env.example
@@ -1,7 +1,14 @@
 PORT=3000
 NODE_ENV=development
+
 ACCESS_TOKEN_SECRET=access_secret
 REFRESH_TOKEN_SECRET=refresh_secret
 ACCESS_TOKEN_EXPIRY=900000 // 15 minutes
 OTP_CODE_EXPIRY=900000 // 10 minutes
 REFRESH_TOKEN_EXPIRY=2592000000 // 30 days
+
+EMAIL_HOST=XXX
+EMAIL_PORT=XXX
+EMAIL_USERNAME=XXX
+EMAIL_PASSWORD=XXX
+EMAIL_FROM=XXX
