--- a/config.env.example
+++ b/config.env.example
@@ -6,6 +6,7 @@ REFRESH_TOKEN_SECRET=refresh_secret
 ACCESS_TOKEN_EXPIRY=900000 // 15 minutes
 OTP_CODE_EXPIRY=900000 // 10 minutes
 REFRESH_TOKEN_EXPIRY=2592000000 // 30 days
+RESET_TOKEN_SECRET=xxx
 
 EMAIL_HOST=XXX
 EMAIL_PORT=XXX
