Feature: SMS messaging (#7)
* add sms service

* fix bug related to access token expiry

--- a/config.env.example
+++ b/config.env.example
@@ -1,15 +1,21 @@
 PORT=3000
 NODE_ENV=development
 
-ACCESS_TOKEN_SECRET=access_secret
-REFRESH_TOKEN_SECRET=refresh_secret
-ACCESS_TOKEN_EXPIRY=900000 // 15 minutes
-OTP_CODE_EXPIRY=900000 // 10 minutes
-REFRESH_TOKEN_EXPIRY=2592000000 // 30 days
-RESET_TOKEN_SECRET=xxx
+ACCESS_TOKEN_SECRET=XXX
+REFRESH_TOKEN_SECRET=XXX
+RESET_TOKEN_SECRET=XXX
+ACCESS_TOKEN_EXPIRY=900
+OTP_CODE_EXPIRY=900
+REFRESH_TOKEN_EXPIRY=2592000
 
 EMAIL_HOST=XXX
 EMAIL_PORT=XXX
 EMAIL_USERNAME=XXX
 EMAIL_PASSWORD=XXX
 EMAIL_FROM=XXX
+
+SMS_FROM=NARA
+SMS_API_TOKEN=XXX
+SMS_API_URL=https://rest.moceanapi.com/rest/2/sms
+
+GOOGLE_APPLICATION_CREDENTIALS=./serviceAccountKey.json
