initial implementation of messaging endpoints

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,5 +37,5 @@
     "esModuleInterop": true, // Enable compatible import syntax for CommonJS modules
     "resolveJsonModule": true // Allow importing JSON modules (useful for config files)
   },
-  "include": ["src/**/*", "src/config"] // Include all TypeScript files in src directory
+  "include": ["src/**/*", "src/config", "src/tests"] // Include all TypeScript files in src directory
 }
