--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "@socket.io/redis-adapter": "^8.3.0",
+    "@types/ioredis": "^4.28.10",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "firebase-admin": "^13.6.0",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "nodemailer": "^7.0.10",
+    "socket.io": "^4.8.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
