added an integration test for the chat system

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "target": "ES2022", // Compile to modern JavaScript version supported by Node.js
     "lib": ["ES2022"], // Include ES2022 library features (no DOM for backend)
 
-    "types": ["node"], // Include Node.js type declarations
+    "types": ["node", "jest"], // Include Node.js and Jest type declarations
 
     "moduleResolution": "nodenext", // Match module strategy for proper resolution in Node.js ESM
 
