--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start": "node -r dotenv/config ./dist/server.js",
     "prebuild": "npm-run-all clean lint:fix format:fix",
     "prestart:dev": "npm run typecheck",
-    "migrate": "prisma migrate dev"
+    "migrate": "prisma migrate dev",
+    "test": "node --experimental-vm-modules ./node_modules/.bin/jest"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,8 @@
     "@prisma/client": "^6.19.0",
     "@socket.io/redis-adapter": "^8.3.0",
     "@types/ioredis": "^4.28.10",
+    "@types/socket.io-client": "^1.4.36",
+    "@types/supertest": "^6.0.3",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -39,6 +42,7 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.5",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.10.1",
@@ -48,10 +52,14 @@
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "jest": "^30.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
     "prisma": "^6.19.0",
     "rimraf": "^6.1.2",
+    "socket.io-client": "^4.8.1",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.6",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.47.0"
