feat: add TTS AI endpoints, Cloudinary integration

--- a/config.env.example
+++ b/config.env.example
@@ -22,3 +22,9 @@ UPSTASH_REDIS_REST_URL=XXX
 UPSTASH_REDIS_REST_TOKEN=XXX
 
 GOOGLE_APPLICATION_CREDENTIALS=./serviceAccountKey.json
+
+TTS_MODEL_URL=https://xxx
+
+CLOUDINARY_CLOUD_NAME=XXX
+CLOUDINARY_API_KEY=XXX
+CLOUDINARY_API_SECRET=XXX
