--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "@types/ioredis": "^4.28.10",
     "@types/socket.io-client": "^1.4.36",
     "@types/supertest": "^6.0.3",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "firebase-admin": "^13.6.0",
+    "form-data": "^4.0.5",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
