--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@prisma/client": "^6.19.0",
     "@socket.io/redis-adapter": "^8.3.0",
     "@types/ioredis": "^4.28.10",
+    "@types/multer": "^2.0.0",
     "@types/socket.io-client": "^1.4.36",
     "@types/supertest": "^6.0.3",
     "axios": "^1.13.2",
@@ -38,6 +39,7 @@
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "socket.io": "^4.8.1",
     "zod": "^4.1.12"
