--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prebuild": "npm-run-all clean lint:fix format:fix",
     "prestart:dev": "npm run typecheck",
     "migrate": "prisma migrate dev",
-    "test": "node --experimental-vm-modules ./node_modules/.bin/jest"
+    "test": "node --experimental-vm-modules ./node_modules/.bin/jest --runInBand",
+    "db:push:test": "dotenv -e test.env --override -- prisma db push"
   },
   "keywords": [],
   "author": "",
@@ -24,8 +25,7 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.19.0",
-    "@socket.io/redis-adapter": "^8.3.0",
-    "@types/ioredis": "^4.28.10",
+    "@types/multer": "^2.0.0",
     "@types/socket.io-client": "^1.4.36",
     "@types/supertest": "^6.0.3",
     "axios": "^1.13.2",
@@ -35,9 +35,9 @@
     "express": "^5.1.0",
     "firebase-admin": "^13.6.0",
     "form-data": "^4.0.5",
-    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
     "socket.io": "^4.8.1",
     "zod": "^4.1.12"
@@ -52,6 +52,7 @@
     "@types/nodemailer": "^7.0.4",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
